--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,10 +1,13 @@
-on:
-  push:
-    branches:
-      - master 
-
-
+name: action
+on: [push]
 jobs:
-  parser:
-    runs-on: ubuntu-20.04.4
+  check-bats-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          go-version: 1.13
+      - name: test
+        run: go test -v ./...   
 
