--- a/PHP.ini
+++ b/PHP.ini
@@ -3,7 +3,7 @@
 name = John Doe
 organization = Acme Widgets Inc.
 
-[database]
+database]
 ; use IP address in case network name resolution is not working
 server = 192.0.2.62     
 port = 143
